# arr_suite

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml
defaults/: main.yml
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml
tasks/: main.yml
tasks/plex/: debian.yml
tasks/prerequisites/: archlinux.yml  debian.yml  redhat.yml
tests/: test.yml
vars/: vault.yml
