[tool.poetry]
name = "arr-suite"
version = "0.1.0"
description = ""
authors = ["Marco Cotrufo <marco.cotrufo@devncode.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.5.0"
molecule = "^24.9.0"
molecule-plugins = {extras = ["vagrant"], version = "^23.5.3"}
ansible-lint = {version = "^24.9.0", markers = "platform_system != 'Windows'"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
